# Stock_Analyzer

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.cline/: config.json
Stock Analysis_Try/: 300100_双林股份_historical_data.csv  300378_鼎捷数智_historical_data.csv  300738_奥飞数据_historical_data.csv  600276_恒瑞医药_historical_data.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 300100_双林股份_historical_data.csv  300378_鼎捷数智_historical_data.csv  300738_奥飞数据_historical_data.csv  688185_康希诺_historical_data.csv  股票分析.ipynb
src/: Stock_Analysis_try.py  dataset.py  features.py  main.py  plots.py
src/data_processing/: data_downloader.py
src/indicators/: __init__.py  adx.py  indicator_ADX.py  indicator_macd.py  indicator_schaff.py  register.py  schaff.py  technical.py
src/modeling/: predict.py  train.py
src/visualization/: Plot_Schaffchannel.py  plot_macd.py  polt_adx.py
